fixed backtracking style spacing and home page

--- a/hmoob_lus/main/static/css/styles.css
+++ b/hmoob_lus/main/static/css/styles.css
@@ -210,6 +210,9 @@ html{
 
 h1 {
   text-align: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  line-height: 1;
 }
 
  /* Footer */
